--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "hammerjs": "^2.0.8",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
+    "ngx-image-viewer": "^1.0.13",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
